--- a/css/styles.css
+++ b/css/styles.css
@@ -858,7 +858,7 @@ footer .social-link:focus {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Roboto" serif;
+  font-family: "Roboto" sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -1059,7 +1059,7 @@ footer .social-link:focus {
 
   .footer-logo-cont {
     width: 768px;
-    margin-top: 89px; 
+    margin-top: 89px;
   }
 
 
@@ -1070,144 +1070,194 @@ footer .social-link:focus {
     flex-direction: column;
   }
 
-  
+
   .footer-social-block {
     flex: 1 1 45%;
     display: flex;
     flex-direction: column;
   }
 
- 
-  .subscription-form {
+
+
+  /* .subscription-form {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 16px;
+  } */
+
+  /* .subscription-form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 16px;
+  } */
+
+  /* .label-footer {
+    margin: 0;
+    display: block;
+  } */
+
+  /* .label-footer {
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 16px;
+    margin: 0;
+    width: auto;
+  } */
+
+
+
+
+  .subscribe-btn {
+    flex: 0 0 auto;
+    /* не розтягується */
+    height: 40px;
+    /* щоб збігалося з input */
   }
 
-  .subscription-form .email-input {
+
+  /* .subscription-form .email-input {
     flex: 1;
   }
 
   .subscription-form .subscribe-btn {
     flex: 0 0 auto;
-  }
+  } */
 
-.footer-logo-block {
+  .footer-logo-block {
     align-items: flex-start;
   }
 
-    .footer-logo-block .footer-text {
-      margin-top: 16px;
-    }
+  .footer-logo-block .footer-text {
+    margin-top: 16px;
+  }
 
-.footer-text {
+  .footer-text {
     margin-left: 0;
     text-align: left;
-}
+  }
 
-.footer-social-block {
+  .footer-social-block {
     align-items: flex-start;
     margin-top: 96px;
   }
 
+  .footer-subscription {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;    
+  }
 
 
+.subscription-form {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+}
+
+
+
+  .email-input {
+    width: 264px;
+    height: 40px;
+  }
 
   /* #endregion footer */
 
+}
 
 
 
 
+/* Десктопні стилі */
+@media screen and (min-width: 1158px) {
 
-  /* Десктопні стилі */
-  @media screen and (min-width: 1158px) {
+  /* #region header */
 
-    /* #region header */
+  .icon-nav-style {
+    margin-right: 76px;
+  }
 
-    .icon-nav-style {
-      margin-right: 76px;
-    }
+  .nav-list {
+    flex-direction: row;
+    align-items: center;
+    gap: 40px;
+  }
 
-    .nav-list {
-      flex-direction: row;
-      align-items: center;
-      gap: 40px;
-    }
+  .contact-link {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding: 24px 0;
+  }
 
-    .contact-link {
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 1.5;
-      letter-spacing: 0.02em;
-      padding: 24px 0;
-    }
+  .section-title {
+    max-width: 1440px;
+  }
 
-    .section-title {
-      max-width: 1440px;
-    }
+  .main-title {
+    margin-top: 188px;
+    margin-bottom: 48px;
+    max-width: 496px;
+  }
 
-    .main-title {
-      margin-top: 188px;
-      margin-bottom: 48px;
-      max-width: 496px;
-    }
+  .section-strategy ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+  }
 
-    .section-strategy ul {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 24px;
-    }
+  .feature-block-item {
+    width: calc((100% - 72px) / 4);
+  }
 
-    .feature-block-item {
-      width: calc((100% - 72px) / 4);
-    }
+  .feature-block-item div {
+    margin-bottom: 8px;
+  }
 
-    .feature-block-item div {
-      margin-bottom: 8px;
-    }
+  .feature-block-item h3 {
+    margin-bottom: 40px;
+  }
 
-    .feature-block-item h3 {
-      margin-bottom: 40px;
-    }
+  .section-fotos {
+    background-color: #f4f4fd;
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 
-    .section-fotos {
-      background-color: #f4f4fd;
-      padding-top: 120px;
-      padding-bottom: 120px;
-    }
+  .list-foto {
+    flex-wrap: nowrap;
+  }
 
-    .list-foto {
-      flex-wrap: nowrap;
-    }
+  .foto-li {
+    width: calc((100% - 3 * 24px) / 4);
+  }
 
-    .foto-li {
-      width: calc((100% - 3 * 24px) / 4);
-    }
+  .portfolio-section {
+    min-width: 1128px;
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 
-    .portfolio-section {
-      min-width: 1128px;
-      padding-top: 120px;
-      padding-bottom: 120px;
-    }
+  .portfolio-list {
+    gap: 48px 24px;
+  }
 
-    .portfolio-list {
-      gap: 48px 24px;
-    }
+  .portfolio-item {
+    width: calc((100% - 48px) / 3);
+  }
 
-    .portfolio-item {
-      width: calc((100% - 48px) / 3);
-    }
+  .footer-logo-cont {
+    width: 1440px;
+  }
 
-    .footer-logo-cont {
-      width: 1440px;
-    }
-
-    .footer-logo {
-      margin-top: 100px;
-    }
+  .footer-logo {
+    margin-top: 100px;
 
   }
+
 }
