--- a/css/styles.css
+++ b/css/styles.css
@@ -46,18 +46,9 @@ IMG {
   margin: 0 auto;
 }
 
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
 
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 1158px;
-    padding: 0 15px;
-  }
-}
+
+
 
 /* #region header */
 
@@ -118,7 +109,7 @@ header {
 
 
 
-/* mobile-menu */
+
 
 .mobile-menu {
   position: fixed;
@@ -196,22 +187,24 @@ header {
   color: #404bbf;
 }
 
-.contact-link {
+/* .contact-link {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #434455;
-}
+} */
 
 
 .phone-block .contact-link {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #4d5ae5;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #434455;
 }
+
+/* #region mobile-menu */
 
 .footer-social {
   display: flex;
@@ -242,12 +235,7 @@ header {
   margin-bottom: 48px;
 }
 
-
-@media screen and (min-width: 768px) {
-  .mobile-menu {
-    display: none;
-  }
-}
+/* #endregion mobile-menu */
 
 /* #endregion header */
 
@@ -858,7 +846,7 @@ footer .social-link:focus {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Roboto" sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -906,11 +894,19 @@ footer .social-link:focus {
 /* Планшетні стилі */
 @media screen and (min-width: 768px) {
 
+  .container {
+    max-width: 768px;
+    padding: 0 15px;
+  }
+
+.burger-btn {
+  display: none;
+}
+
+
+
   /* #region header */
 
-  .burger-btn {
-    display: none;
-  }
 
   .menu-nav-list {
     display: flex;
@@ -948,7 +944,8 @@ footer .social-link:focus {
     font-style: normal;
     display: block;
     margin-left: auto;
-    margin-bottom: 48px;
+    margin-top: 16px;
+    margin-bottom: 16px;
   }
 
   .main-header {
@@ -1052,10 +1049,11 @@ footer .social-link:focus {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-start;
-    width: 768px;
+    max-width: 768px;
     margin: 0 auto;
-    gap: 24px;
   }
+
+
 
   .footer-logo-cont {
     width: 768px;
@@ -1063,106 +1061,63 @@ footer .social-link:focus {
   }
 
 
-  .footer-logo-block,
-  .footer-subscription {
-    flex: 1 1 45%;
-    display: flex;
-    flex-direction: column;
-  }
-
-
-  .footer-social-block {
-    flex: 1 1 45%;
-    display: flex;
-    flex-direction: column;
-  }
 
 
 
-  /* .subscription-form {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 16px;
-  } */
-
-  /* .subscription-form {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 16px;
-  } */
-
-  /* .label-footer {
-    margin: 0;
-    display: block;
-  } */
-
-  /* .label-footer {
-    flex-direction: row;
-    align-items: flex-start;
-    gap: 16px;
-    margin: 0;
-    width: auto;
-  } */
-
-
-
-
-  .subscribe-btn {
-    flex: 0 0 auto;
-    /* не розтягується */
-    height: 40px;
-    /* щоб збігалося з input */
-  }
-
-
-  /* .subscription-form .email-input {
-    flex: 1;
-  }
-
-  .subscription-form .subscribe-btn {
-    flex: 0 0 auto;
-  } */
-
-  .footer-logo-block {
-    align-items: flex-start;
-  }
-
-  .footer-logo-block .footer-text {
-    margin-top: 16px;
-  }
-
-  .footer-text {
-    margin-left: 0;
-    text-align: left;
-  }
-
-  .footer-social-block {
-    align-items: flex-start;
-    margin-top: 96px;
-  }
-
-  .footer-subscription {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 16px;    
-  }
-
-
-.subscription-form {
+  /*
+.footer-logo-block,
+.footer-subscription {
+  flex: 1 1 45%;
   display: flex;
-  flex-direction: row;
-  gap: 24px;
+  flex-direction: column;
+}
+
+/*
+.footer-social-block {
+  flex: 1 1 45%;
+  display: flex;
+  flex-direction: column;
+}
+/*
+.subscribe-btn {
+  flex: 0 0 auto;
+  height: 40px;
 }
 
 
 
-  .email-input {
-    width: 264px;
-    height: 40px;
-  }
+
+.footer-logo-block {
+  align-items: flex-start;
+}
+
+.footer-logo-block .footer-text {
+  margin-top: 16px;
+}
+
+.footer-text {
+  margin-left: 0;
+  text-align: left;
+}
+
+.footer-social-block {
+  align-items: flex-start;
+  margin-top: 96px;
+}
+
+.footer-subscription {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+}
+
+
+
+.email-input {
+  width: 264px;
+  height: 40px;
+} */
 
   /* #endregion footer */
 
@@ -1257,7 +1212,6 @@ footer .social-link:focus {
 
   .footer-logo {
     margin-top: 100px;
-
   }
 
 }
