--- a/css/styles.css
+++ b/css/styles.css
@@ -36,9 +36,7 @@ IMG {
   height: auto;
 }
 
-.button {
-  cursor: pointer;
-}
+
 
 .container {
   max-width: 320px;
@@ -260,8 +258,8 @@ header {
 
 .main-title {
   font-weight: 700;
-  font-size: 56px;
-  line-height: 1.07;
+  font-size: 36px;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
@@ -342,9 +340,9 @@ button {
 }
 
 .feature-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 8px;
@@ -889,6 +887,14 @@ footer .social-link:focus {
 /* #endregion footer */
 
 
+/* #region Modal window */
+
+
+
+
+/* #endregion Modal window */
+
+
 
 /* Планшетні стилі */
 @media screen and (min-width: 768px) {
@@ -909,6 +915,11 @@ footer .social-link:focus {
   .mobile-menu {
     display: none;
   }
+
+  .feature-block-item h3 {
+    text-align: left;
+  }
+
 
 
   /* #region header */
@@ -990,6 +1001,9 @@ footer .social-link:focus {
   }
 
   .main-title {
+    font-size: 56px;
+    line-height: 1.07143;
+    letter-spacing: 0.02em;
     margin-top: 112px;
     margin-bottom: 36px;
     max-width: 496px;
@@ -1007,6 +1021,20 @@ footer .social-link:focus {
 
   .section-strategy li {
     text-align: left;
+  }
+
+  .list-feature {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 72px 24px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .feature-block-item {
+    width: 48%;
+    box-sizing: border-box;
   }
 
   /* #endregion section-strategy */
@@ -1118,16 +1146,16 @@ footer .social-link:focus {
     display: none;
   }
 
-.subscribe-btn {
+  .subscribe-btn {
     width: 165px;
     height: 40px;
   }
 
-.email-input {
-    width: 264px; 
+  .email-input {
+    width: 264px;
   }
 
-  
+
   /* #endregion footer */
 
 }
@@ -1140,8 +1168,42 @@ footer .social-link:focus {
 
   /* #region header */
 
+  .header-container {
+    justify-content: space-between;
+    max-width: 1158px;
+    background-color: #fff;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+
   .icon-nav-style {
     margin-right: 76px;
+  }
+
+  .nav-list a {
+    position: relative;
+    text-decoration: none;
+    color: #404bbf;
+    padding-bottom: 4px;
+    transition: color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .icon-container {
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    width: 264px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+  }
+
+  .icon-link {
+    text-decoration: none;
+    margin-right: 76px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .nav-list {
@@ -1158,15 +1220,25 @@ footer .social-link:focus {
     padding: 24px 0;
   }
 
+  /* #endregion header */
+
+  /* #region section-title */
+
   .section-title {
     max-width: 1440px;
   }
+
 
   .main-title {
     margin-top: 188px;
     margin-bottom: 48px;
     max-width: 496px;
   }
+
+  /* #endregion section-title */
+
+
+  /* #region section-strategy */
 
   .section-strategy ul {
     display: flex;
@@ -1186,6 +1258,19 @@ footer .social-link:focus {
   .feature-block-item h3 {
     margin-bottom: 40px;
   }
+
+  .feature-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+  }
+
+  .section-strategy li {
+    width: calc((100% - 72px) / 4);
+    text-align: left;
+  }
+
+  /* #endregion section-strategy */
 
   .section-fotos {
     background-color: #f4f4fd;
