--- a/css/styles.css
+++ b/css/styles.css
@@ -891,10 +891,283 @@ footer .social-link:focus {
 
 /* #region Modal window */
 
+.backdrop {
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+ 
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
 
+.backdrop:not(.is-open) .modal-drop {
+  transform: translate(-50%, -50%) scale(1.5);
+}
 
+.modal-drop {
+  width: 288px;
+  height: 623px;
+  background-color: #fcfcfc;
+  border-radius: 4px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  padding: 72px 24px 24px 24px;
+}
+
+.modal-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: #e7e9fc;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:hover {
+  background-color: #404bbf;
+  border: none;
+}
+
+.modal-close:focus {
+  background-color: #404bbf;
+  border: none;
+}
+
+.modal-close:hover .subscribe-icon-close {
+  fill: #ffffff;
+}
+
+.modal-close:focus .subscribe-icon-close {
+  fill: #ffffff;
+}
+
+.modal-title {
+  width: 100%;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 16px;
+}
+
+.subscribe-icon-close {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.application-form {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.input-with-icon {
+  margin-bottom: 8px;
+
+  position: relative;
+  width: 100%;
+}
+
+.label-name {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: block;
+  margin-bottom: 4px;
+}
+
+.input-container {
+  position: relative
+}
+
+.input-name {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-name:focus {
+  border-color: #4D5AE5;
+}
+
+.input-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-name:focus+.input-icon {
+  fill: #4D5AE5;
+}
+
+.textarea-comment {
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.textarea-comment:focus {
+  border-color: #4D5AE5;
+}
+
+.label-checkbox {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.textarea-container {
+  margin-bottom: 16px;
+}
+
+.checkbox-span {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+
+.checkbox-input.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+.btn-submit {
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4D5AE5;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-submit:hover {
+  background-color: #404bbf;
+}
+
+.input-with-icon input:hover,
+.input-with-icon input:focus {
+  border-color: #4D5AE5;
+}
+
+.input-with-icon input:hover+svg,
+.input-with-icon input:focus+svg {
+  fill: #4D5AE5;
+}
+
+.input-with-icon:hover .input-icon,
+.input-with-icon:focus-within .input-icon {
+  fill: #4D5AE5;
+}
+
+.input-with-icon:first-of-type::after {
+  content: "";
+  position: absolute;
+  left: 36px;
+  top: 8px;
+  bottom: 8px;
+  width: 1px;
+  background-color: #8E8F99;
+  pointer-events: none;
+}
+
+.checkbox-wrapper {
+  display: inline-flex;
+  align-items: center;
+  padding: 4px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  transition: border-color 0.2s ease;
+  margin-bottom: 24px;
+}
+
+.checkbox-wrapper label,
+.checkbox-wrapper .checkbox-span {
+  white-space: nowrap;
+}
+
+.checkbox-wrapper:hover {
+  border-color: #4D5AE5;
+}
+
+.checkbox-input:checked+label .checkbox-span {
+  background-color: #404bbf;
+  border: none;
+  fill: #F4F4FD;
+}
 
 /* #endregion Modal window */
+
+
+
+
 
 
 
@@ -1090,11 +1363,7 @@ footer .social-link:focus {
   }
 
 
-  /* .footer-logo-block,
-  .footer-social-block {
-    flex: 1 1 auto;
-    width: 208px;
-  } */
+  
 
   .footer-logo {
     margin: 0;
@@ -1192,7 +1461,7 @@ footer .social-link:focus {
     /* label не тягнеться на всю ширину */
   }
 
- 
+
 
   /* 4. Кнопка */
   .subscribe-btn {
@@ -1441,25 +1710,23 @@ footer .social-link:focus {
   .footer-logo-cont {
     background-color: #2e2f42;
     width: 100%;
-    margin: 0;
+    margin-top: 120px;
   }
 
   .footer-logo-cont .container {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    gap: 24px;
     justify-content: center;
     align-items: flex-start;
     width: 100%;
     margin-top: 100px;
+    gap: 0;
   }
 
   .footer-logo-block {
     align-items: flex-start;
-    margin-left: 156px;
-    margin-right: 120px;
-    margin-bottom: 100px;
+    margin: 0 120px 100px 156px;
     width: 264px;
   }
 
@@ -1467,6 +1734,11 @@ footer .social-link:focus {
     display: flex;
     margin-top: 0;
     margin-bottom: 16px;
+    padding: 0;
+  }
+
+  .footer-text {
+    margin: 0;
   }
 
   .footer-social-block {
@@ -1506,41 +1778,14 @@ footer .social-link:focus {
     margin-top: 0;
   }
 
-  .label-footer {
-    margin-bottom: 0;
+
+  .subscription-form {
+    gap: 24px;
   }
 
-  /* .footer-logo {
-    margin-top: 100px;
-  } */
-
-  /* 
-.footer-logo-cont .container {
-  display: flex;
-  align-items: baseline;
-  justify-content: flex-start;
-  gap: 120px;
-}
-
-.footer-logo-block {
-  margin-right: 120px;
-  align-items: baseline;
-}
-
-.subscription-form {
-  display: flex;
-  align-items: flex-end;
-  width: 100%;
-  gap: 24px;
-} */
-
-
-  /* .footer-logo-cont .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin-top: 120px;
-  } */
+  .subscribe-btn {
+    margin-left: 0;
+  }
 
   /* #endregion footer */
 
