--- a/css/styles.css
+++ b/css/styles.css
@@ -933,7 +933,6 @@ footer .social-link:focus {
   justify-content: flex-start;
   flex-direction: column;
   gap: 8px;
-  /* margin: 8px 16px; */
 }
 
 .modal-close {
@@ -995,8 +994,6 @@ footer .social-link:focus {
 }
 
 .input-with-icon {
-  /* margin-top: 8px;
-  margin-bottom: 8px; */
   position: relative;
   width: 100%;
 }
@@ -1501,313 +1498,330 @@ footer .social-link:focus {
 
   /* #endregion footer */
 
-}
+  /* #region Modal window */
 
-
-
-
-/* Десктопні стилі */
-@media screen and (min-width: 1158px) {
-
-  /* #region header */
-
-  .header-container {
-    justify-content: space-between;
-    max-width: 1158px;
-    background-color: #fff;
-    padding-left: 15px;
-    padding-right: 15px;
+  .modal-drop {
+    width: 408px;
   }
 
 
-  .icon-nav-style {
-    margin-right: 76px;
-  }
-
-  .nav-list a {
-    position: relative;
-    text-decoration: none;
-    color: #404bbf;
-    padding-bottom: 4px;
-    transition: color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .icon-link {
-    text-decoration: none;
-    margin-right: 76px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .nav-list {
-    flex-direction: row;
-    align-items: center;
-    gap: 40px;
-  }
-
-  .contact-link {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    padding: 24px 0;
-  }
-
-  /* #endregion header */
-
-  /* #region section-title */
-
-  .section-title {
-    max-width: 1440px;
-  }
-
-
-  .main-title {
-    margin-top: 188px;
-    margin-bottom: 48px;
-    max-width: 496px;
-  }
-
-  /* #endregion section-title */
-
-
-  /* #region section-strategy */
-
-  .container {
-    max-width: 1128px;
-  }
-
-
-  .icon-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 224px;
-    width: 264px;
-    background-color: #f4f4fd;
-    border-radius: 4px;
-    border: 1px solid #8e8f99;
-    margin-bottom: 8px;
-  }
-
-  .svg-icon-strategy {
-    display: flex;
-  }
-
-  .section-strategy {
-    background-color: #fff;
-    padding-bottom: 120px;
-    padding-top: 120px;
-    margin-left: 156px;
-    margin-right: 156px;
-  }
-
-  .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-  }
-
-  .section-strategy ul {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 24px;
-  }
-
-
-
-  .section-strategy li {
-    width: calc((100% - 72px) / 4);
-    text-align: left;
-  }
-
-  .section-strategy p {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-  }
-
-  .feature-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    margin-bottom: 8px;
-    margin-top: 8px;
-  }
-
-
-  .feature-block-item {
-    width: calc((100% - 72px) / 4);
+  .application-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    box-sizing: content-box;
+    margin: auto;
+    gap: 8px;
+    width: 360px;
   }
+    /* #endregion Modal window */
 
 
-  .feature-block-item h3,
-  .feature-block-item p {
-    text-align: left;
-    width: 100%;
-  }
-
-  .feature-block-item svg {
-    margin-bottom: 8px;
   }
 
 
 
 
+  /* Десктопні стилі */
+  @media screen and (min-width: 1158px) {
 
-  /* #endregion section-strategy */
+    /* #region header */
 
-  /* #region section-fotos */
+    .header-container {
+      justify-content: space-between;
+      max-width: 1158px;
+      background-color: #fff;
+      padding-left: 15px;
+      padding-right: 15px;
+    }
 
 
-  .section-fotos {
-    background-color: #f4f4fd;
-    padding-top: 120px;
-    padding-bottom: 120px;
+    .icon-nav-style {
+      margin-right: 76px;
+    }
+
+    .nav-list a {
+      position: relative;
+      text-decoration: none;
+      color: #404bbf;
+      padding-bottom: 4px;
+      transition: color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .icon-link {
+      text-decoration: none;
+      margin-right: 76px;
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .nav-list {
+      flex-direction: row;
+      align-items: center;
+      gap: 40px;
+    }
+
+    .contact-link {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.02em;
+      padding: 24px 0;
+    }
+
+    /* #endregion header */
+
+    /* #region section-title */
+
+    .section-title {
+      max-width: 1440px;
+    }
+
+
+    .main-title {
+      margin-top: 188px;
+      margin-bottom: 48px;
+      max-width: 496px;
+    }
+
+    /* #endregion section-title */
+
+
+    /* #region section-strategy */
+
+    .container {
+      max-width: 1128px;
+    }
+
+
+    .icon-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 224px;
+      width: 264px;
+      background-color: #f4f4fd;
+      border-radius: 4px;
+      border: 1px solid #8e8f99;
+      margin-bottom: 8px;
+    }
+
+    .svg-icon-strategy {
+      display: flex;
+    }
+
+    .section-strategy {
+      background-color: #fff;
+      padding-bottom: 120px;
+      padding-top: 120px;
+      margin-left: 156px;
+      margin-right: 156px;
+    }
+
+    .visually-hidden {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      margin: -1px;
+      border: 0;
+      padding: 0;
+      white-space: nowrap;
+      clip-path: inset(100%);
+      clip: rect(0 0 0 0);
+      overflow: hidden;
+    }
+
+    .section-strategy ul {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 24px;
+    }
+
+
+
+    .section-strategy li {
+      width: calc((100% - 72px) / 4);
+      text-align: left;
+    }
+
+    .section-strategy p {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 1.5;
+      letter-spacing: 0.02em;
+      color: #434455;
+    }
+
+    .feature-title {
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 1.2;
+      letter-spacing: 0.02em;
+      color: #2e2f42;
+      margin-bottom: 8px;
+      margin-top: 8px;
+    }
+
+
+    .feature-block-item {
+      width: calc((100% - 72px) / 4);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      box-sizing: content-box;
+    }
+
+
+    .feature-block-item h3,
+    .feature-block-item p {
+      text-align: left;
+      width: 100%;
+    }
+
+    .feature-block-item svg {
+      margin-bottom: 8px;
+    }
+
+
+
+
+
+    /* #endregion section-strategy */
+
+    /* #region section-fotos */
+
+
+    .section-fotos {
+      background-color: #f4f4fd;
+      padding-top: 120px;
+      padding-bottom: 120px;
+    }
+
+    .list-foto {
+      flex-wrap: nowrap;
+    }
+
+    .foto-li {
+      width: calc((100% - 3 * 24px) / 4);
+    }
+
+    /* #endregion section-fotos */
+
+
+    /* #region portfolio */
+
+    .section.portfolio-section {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+
+    .portfolio-section {
+      max-width: 1128px;
+      padding-top: 120px;
+      padding-bottom: 120px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .portfolio-list {
+      gap: 48px 24px;
+    }
+
+    .portfolio-item {
+      width: calc((100% - 48px) / 3);
+    }
+
+    /* #endregion portfolio */
+
+
+    /* #region footer */
+
+    .container {
+      margin: 0;
+      padding: 0;
+    }
+
+    .footer-logo-cont {
+      background-color: #2e2f42;
+      width: 100%;
+      margin-top: 120px;
+    }
+
+    .footer-logo-cont .container {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: center;
+      align-items: flex-start;
+      width: 100%;
+      margin-top: 100px;
+      gap: 0;
+    }
+
+    .footer-logo-block {
+      align-items: flex-start;
+      margin: 0 120px 100px 156px;
+      width: 264px;
+    }
+
+    .footer-logo {
+      display: flex;
+      margin-top: 0;
+      margin-bottom: 16px;
+      padding: 0;
+    }
+
+    .footer-text {
+      margin: 0;
+    }
+
+    .footer-social-block {
+      align-items: flex-start;
+      width: 208px;
+      margin-top: 0;
+      margin-bottom: 132px;
+    }
+
+    .footer-social-block .footer-text {
+      text-align: left;
+      margin-left: 0;
+    }
+
+
+    .footer-subscription {
+      align-items: flex-start;
+      width: 453px;
+      padding: 0;
+      margin-right: 159px;
+      margin-left: 80px;
+    }
+
+
+
+
+
+
+
+    .footer-subscription.footer-logo-div {
+      padding-left: 0;
+    }
+
+
+
+    .subscribe-title {
+      margin-top: 0;
+    }
+
+
+    .subscription-form {
+      gap: 24px;
+    }
+
+    .subscribe-btn {
+      margin-left: 0;
+    }
+
+    /* #endregion footer */
+
+
   }
-
-  .list-foto {
-    flex-wrap: nowrap;
-  }
-
-  .foto-li {
-    width: calc((100% - 3 * 24px) / 4);
-  }
-
-  /* #endregion section-fotos */
-
-
-  /* #region portfolio */
-
-  .section.portfolio-section {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-
-  .portfolio-section {
-    max-width: 1128px;
-    padding-top: 120px;
-    padding-bottom: 120px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .portfolio-list {
-    gap: 48px 24px;
-  }
-
-  .portfolio-item {
-    width: calc((100% - 48px) / 3);
-  }
-
-  /* #endregion portfolio */
-
-
-  /* #region footer */
-
-  .container {
-    margin: 0;
-    padding: 0;
-  }
-
-  .footer-logo-cont {
-    background-color: #2e2f42;
-    width: 100%;
-    margin-top: 120px;
-  }
-
-  .footer-logo-cont .container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: flex-start;
-    width: 100%;
-    margin-top: 100px;
-    gap: 0;
-  }
-
-  .footer-logo-block {
-    align-items: flex-start;
-    margin: 0 120px 100px 156px;
-    width: 264px;
-  }
-
-  .footer-logo {
-    display: flex;
-    margin-top: 0;
-    margin-bottom: 16px;
-    padding: 0;
-  }
-
-  .footer-text {
-    margin: 0;
-  }
-
-  .footer-social-block {
-    align-items: flex-start;
-    width: 208px;
-    margin-top: 0;
-    margin-bottom: 132px;
-  }
-
-  .footer-social-block .footer-text {
-    text-align: left;
-    margin-left: 0;
-  }
-
-
-  .footer-subscription {
-    align-items: flex-start;
-    width: 453px;
-    padding: 0;
-    margin-right: 159px;
-    margin-left: 80px;
-  }
-
-
-
-
-
-
-
-  .footer-subscription.footer-logo-div {
-    padding-left: 0;
-  }
-
-
-
-  .subscribe-title {
-    margin-top: 0;
-  }
-
-
-  .subscription-form {
-    gap: 24px;
-  }
-
-  .subscribe-btn {
-    margin-left: 0;
-  }
-
-  /* #endregion footer */
-
-
-}
