--- a/css/styles.css
+++ b/css/styles.css
@@ -99,16 +99,6 @@ header {
 
 /* region Modal header */
 
-
-
-
-
-
-
-
-
-
-
 .mobile-menu {
   position: fixed;
   top: 0;
@@ -185,15 +175,6 @@ header {
   color: #404bbf;
 }
 
-/* .contact-link {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #434455;
-} */
-
-
 .phone-block .contact-link {
   font-weight: 400;
   font-size: 12px;
@@ -209,7 +190,6 @@ header {
   align-items: baseline;
   gap: 40px;
 }
-
 
 .social-icon {
   width: 40px;
@@ -448,7 +428,7 @@ button {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-foto-info ul li {
+.foto-info ul li {
   width: 100%;
   height: auto;
   display: block;
@@ -644,10 +624,6 @@ foto-info ul li {
   align-items: center;
 }
 
-
-
-
-
 .footer-logo-block,
 .footer-social-block,
 .footer-subscription {
@@ -659,7 +635,6 @@ foto-info ul li {
   flex-direction: column;
   align-items: center;
 }
-
 
 .footer-logo {
   font-family: "Raleway", sans-serif;
@@ -695,7 +670,6 @@ foto-info ul li {
   align-items: center;
   gap: 16px;
 }
-
 
 .footer-social-block .footer-text {
   text-align: center;
@@ -764,8 +738,6 @@ foto-info ul li {
   width: 40px;
   height: 40px;
 }
-
-
 
 .social-link {
   width: 100%;
@@ -1107,7 +1079,6 @@ footer .social-link:focus {
   color: #4d5ae5;
 }
 
-
 .btn-submit {
   display: block;
   width: 169px;
@@ -1166,7 +1137,6 @@ footer .social-link:focus {
   margin-bottom: 24px;
 }
 
-
 .checkbox-wrapper:hover {
   border-color: #4D5AE5;
 }
@@ -1178,14 +1148,6 @@ footer .social-link:focus {
 }
 
 /* #endregion Modal window */
-
-
-
-
-
-
-
-
 
 
 /* Планшетні стилі */
@@ -1379,9 +1341,6 @@ footer .social-link:focus {
     gap: 16px;
   }
 
-
-
-
   .footer-logo {
     margin: 0;
     padding-bottom: 16px;
@@ -1396,31 +1355,17 @@ footer .social-link:focus {
     gap: 0;
   }
 
-
   .footer-social-block .footer-text {
     text-align: left;
   }
-
-
-
-
 
   .footer-logo-cont {
     width: 768px;
     margin-top: 89px;
   }
 
-
-
-
-
-
   .label-footer {
     display: block;
-
-
-
-    /* align-items: flex-start; */
     margin-bottom: 96px;
   }
 
@@ -1446,41 +1391,24 @@ footer .social-link:focus {
     width: 264px;
   }
 
-
-
-
-  /* 1. Форми: горизонтальний ряд */
   .subscription-form {
     display: flex;
     flex-direction: row;
-    /* input + button горизонтально */
     align-items: flex-start;
-    /* верхній край вирівнювання */
     gap: 16px;
-    /* відстань між label і кнопкою */
     margin-top: 0;
     margin-left: 0;
   }
 
-  /* 2. Label: текст + input горизонтально */
   .label-footer {
     display: flex;
-    /* label як flex-контейнер */
     flex-direction: row;
-    /* текст і input по горизонталі */
     align-items: center;
-    /* вертикальне вирівнювання */
     gap: 8px;
-    /* відстань між текстом і input */
     margin: 0;
-    /* прибираємо зайві відступи */
     width: auto;
-    /* label не тягнеться на всю ширину */
   }
 
-
-
-  /* 4. Кнопка */
   .subscribe-btn {
     display: flex;
     align-items: center;
@@ -1504,7 +1432,6 @@ footer .social-link:focus {
     width: 408px;
   }
 
-
   .application-form {
     display: flex;
     flex-direction: column;
@@ -1513,36 +1440,22 @@ footer .social-link:focus {
     width: 360px;
   }
 
-
-
-
   .label-checkbox {
     display: inline-flex;
-    /* чекбокс і текст в одному рядку */
     align-items: center;
-    /* вирівнювання по вертикалі */
     gap: 4px;
-    /* відстань між чекбоксом і текстом */
     white-space: nowrap;
-    /* заборона переносу рядка */
-    padding-left: 0;
-    /* прибираємо зайве зміщення */
   }
 
   .checkbox-span {
     position: relative;
-    /* щоб чекбокс залишався на місці */
     flex-shrink: 0;
-    /* не стискаємо чекбокс */
-    width: 16px;
-    height: 16px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 2px;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     fill: transparent;
-    margin-right: 8px;
   }
 
   /* #endregion Modal window */
@@ -1565,7 +1478,6 @@ footer .social-link:focus {
     padding-left: 15px;
     padding-right: 15px;
   }
-
 
   .icon-nav-style {
     margin-right: 76px;
@@ -1607,7 +1519,6 @@ footer .social-link:focus {
     max-width: 1440px;
   }
 
-
   .main-title {
     margin-top: 188px;
     margin-bottom: 48px;
@@ -1622,7 +1533,6 @@ footer .social-link:focus {
   .container {
     max-width: 1128px;
   }
-
 
   .icon-container {
     display: flex;
@@ -1668,8 +1578,6 @@ footer .social-link:focus {
     gap: 24px;
   }
 
-
-
   .section-strategy li {
     width: calc((100% - 72px) / 4);
     text-align: left;
@@ -1693,7 +1601,6 @@ footer .social-link:focus {
     margin-top: 8px;
   }
 
-
   .feature-block-item {
     width: calc((100% - 72px) / 4);
     display: flex;
@@ -1701,7 +1608,6 @@ footer .social-link:focus {
     align-items: center;
     box-sizing: content-box;
   }
-
 
   .feature-block-item h3,
   .feature-block-item p {
@@ -1745,7 +1651,6 @@ footer .social-link:focus {
     margin-left: auto;
     margin-right: auto;
   }
-
 
   .portfolio-section {
     max-width: 1128px;
@@ -1829,22 +1734,13 @@ footer .social-link:focus {
     margin-left: 80px;
   }
 
-
-
-
-
-
-
   .footer-subscription.footer-logo-div {
     padding-left: 0;
   }
 
-
-
   .subscribe-title {
     margin-top: 0;
   }
-
 
   .subscription-form {
     gap: 24px;
