--- a/css/styles.css
+++ b/css/styles.css
@@ -900,6 +900,9 @@ footer .social-link:focus {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
+  width: 320px;
+  height: 640px;
+  margin: 0 auto;
 }
 
 .backdrop:not(.is-open) .modal-drop {
@@ -907,7 +910,7 @@ footer .social-link:focus {
 }
 
 .modal-drop {
-  width: 256px;
+  width: 288px;
   background-color: #fcfcfc;
   border-radius: 4px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -980,7 +983,7 @@ footer .social-link:focus {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  width: 256px;
+  width: 288px;
 }
 
 .input-with-icon {
@@ -1048,23 +1051,17 @@ footer .social-link:focus {
 }
 
 .label-checkbox {
+  display: flex;
+  align-items: center;
+  gap: 8px;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  position: relative;
-  display: block;
-  padding-left: 24px;
   width: 256px;
 }
 
-.label-checkbox .checkbox-span {
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
 
 .checkbox-span {
   width: 16px;
@@ -1782,6 +1779,5 @@ footer .social-link:focus {
   }
 
   /* #endregion footer */
-
 
 }
